force-app/main/default/objects/OrderItem/fields/CostFreight__c.field-meta.xml
<CustomField>
    <fullName>CostFreight__c</fullName>
    <description>The Cost  of the Freight</description>
    <inlineHelpText>Write the value of them</inlineHelpText>
    <label>CostFreight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>