force-app/main/default/objects/OrderItem/fields/Descount__c.field-meta.xml
<CustomField>
    <fullName>Descount__c</fullName>
    <description>Percentage of descaunt of the final price</description>
    <inlineHelpText>Write the percentage</inlineHelpText>
    <label>Descount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>