force-app/main/default/objects/OrderItem/fields/DiscountedPriceUnit__c.field-meta.xml
<CustomField>
    <fullName>DiscountedPriceUnit__c</fullName>
    <label>Discounted price per unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>