force-app/main/default/objects/OrderItem/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The final price of the order with all taxes, margin and freigth</description>
    <inlineHelpText>Write the price</inlineHelpText>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>