force-app/main/default/objects/OrderItem/fields/isDeletedExternal__c.field-meta.xml
<CustomField>
    <fullName>isDeletedExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show if was deled on external system</description>
    <label>Is Deleted On Externally</label>
    <type>Checkbox</type>
</CustomField>