force-app/main/default/objects/OrderItem/fields/MarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>MarginPercentage__c</fullName>
    <description>The percentage of the margin</description>
    <inlineHelpText>Write the value</inlineHelpText>
    <label>Margin Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>