force-app/main/default/objects/OrderItem/fields/NoMarginPrice__c.field-meta.xml
<CustomField>
    <fullName>NoMarginPrice__c</fullName>
    <description>The price without the margin percentage</description>
    <inlineHelpText>Write the value</inlineHelpText>
    <label>No Margin Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>