force-app/main/default/objects/OrderItem/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>Observasion of the order product</description>
    <inlineHelpText>Write something</inlineHelpText>
    <label>Observation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>