force-app/main/default/objects/OrderItem/fields/TaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>TaxPercentage__c</fullName>
    <description>The percentage of tax</description>
    <inlineHelpText>Write the percentage of the tax</inlineHelpText>
    <label>Tax Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>