force-app/main/default/objects/OrderItem/validationRules/Api_Only_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Api_Only_Rule</fullName>
    <active>true</active>
    <description>is is from a external system only api can change</description>
    <errorConditionFormula>AND($Profile.Name = &quot;adm&quot;,  TotvsItem__c = true)</errorConditionFormula>
    <errorMessage>Cannot change from salesforce items from external</errorMessage>
</ValidationRule>