force-app/main/default/objects/OrderItem/validationRules/Product_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Rule</fullName>
    <active>true</active>
    <description>Account cant be null</description>
    <errorConditionFormula>ISBLANK(Product2Id)</errorConditionFormula>
    <errorDisplayField>Product2Id</errorDisplayField>
    <errorMessage>Select a Product</errorMessage>
</ValidationRule>