force-app/main/default/objects/OrderItem/validationRules/UnitPrice_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>UnitPrice_Rule</fullName>
    <active>true</active>
    <description>Rule that make unit price be above 0</description>
    <errorConditionFormula>UnitPrice &lt;= 0</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Unit Price must be above zero</errorMessage>
</ValidationRule>